--- a/document/literature.bib
+++ b/document/literature.bib
@@ -1,6 +1,6 @@
 @book{Schmeling_Dargatz_2022,
   place     = {United States},
-  title     = {Kubernetes Native Development: Develop, build, deploy, and run applications on kubernetes},
+  title     = {Kubernetes Native Development: Develop, build, deploy, and run applications on Kubernetes},
   publisher = {Apress},
   author    = {Schmeling, Benjamin and Dargatz, Maximilian},
   year      = {2022}
